fix mobile header spacing

--- a/src/app/components/layout/navbar.module.css
+++ b/src/app/components/layout/navbar.module.css
@@ -13,6 +13,7 @@
   justify-content: space-between;
   align-items: center;
   --container-size: var(--container-size-md);
+  padding: 0 1rem;
 }
 
 .logo {
